tests/golden/type_errors/typed_array_pop_result_mismatch.cd
let xs: [number] = [1];
let s: string = pop(xs);
